extract Grafana server domain to variable

--- a/terraform/templates/init.sh.tmpl
+++ b/terraform/templates/init.sh.tmpl
@@ -16,9 +16,9 @@ cd /opt
 git clone https://github.com/ryanrishi/covid-19-grafana.git
 cd covid-19-grafana
 
-GF_SERVER_DOMAIN=stage.ryanrishi.com \
+GF_SERVER_DOMAIN=${grafana_server_domain} \
 GF_SERVER_SERVE_FROM_SUB_PATH=true \
-GF_SERVER_ROOT_URL=https://stage.ryanrishi.com/covid-19-dashboard/ \
+GF_SERVER_ROOT_URL=https://${grafana_server_domain}/covid-19-dashboard/ \
 GF_SECURITY_ADMIN_USER=${grafana_admin_user} \
 GF_SECURITY_ADMIN_PASSWORD=${grafana_admin_password} \
 docker-compose up -d
