--- a/terraform/templates/init.sh.tmpl
+++ b/terraform/templates/init.sh.tmpl
@@ -20,7 +20,7 @@ GF_SERVER_DOMAIN=${grafana_server_domain} \
 GF_SERVER_SERVE_FROM_SUB_PATH=true \
 GF_SERVER_ROOT_URL=https://${grafana_server_domain}/covid-19-dashboard/ \
 GF_SECURITY_ADMIN_USER=${grafana_admin_user} \
-GF_SECURITY_ADMIN_PASSWORD=${grafana_admin_password} \
+GF_SECURITY_ADMIN_PASSWORD="${grafana_admin_password}" \
 docker-compose up -d
 
 # setting $GF_SECURITY_ADMIN_PASSWORD doesn't work in a Docker container
@@ -31,7 +31,7 @@ sleep 1
 
 # workaround for "the input device is not a TTY"
 # https://github.com/docker/compose/issues/5696
-COMPOSE_INTERACTIVE_NO_CLI=1 docker-compose exec -T grafana grafana-cli admin reset-admin-password ${grafana_admin_password}
+COMPOSE_INTERACTIVE_NO_CLI=1 docker-compose exec -T grafana grafana-cli admin reset-admin-password "${grafana_admin_password}"
 
 # Download latest COVID-19 data
 cd /tmp
